WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258652
REGRESSION(
264840@main
) ASSERTION FAILED: CGRectIsNull(layer.contentsDirtyRect)
https://bugs.webkit.org/show_bug.cgi?id=258652
Summary
REGRESSION(264840@main) ASSERTION FAILED: CGRectIsNull(layer.contentsDirtyRect)
Simon Fraser (smfr)
Reported
2023-06-28 18:34:55 PDT
Sometimes, layer.contentsDirtyRect is not the null rect when we expect it to be.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-06-28 18:35:14 PDT
<
rdar://111229068
>
Simon Fraser (smfr)
Comment 2
2023-06-28 18:39:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15390
EWS
Comment 3
2023-06-29 15:06:04 PDT
Committed
265631@main
(72ba23e6beb5): <
https://commits.webkit.org/265631@main
> Reviewed commits have been landed. Closing PR #15390 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug